# practice-docker-volume

./: Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml
.devcontainer/: devcontainer.json  oidc.sh  postinstall.sh
app/api/endpoints/: root.py
